--- a/ProjectNLP/essay_scoring.ipynb
+++ b/ProjectNLP/essay_scoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -234,6 +234,73 @@
     "else:\n",
     "    print(f\"No essay found with ID {essay_id}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sentence_transformers'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# This is a model made by ChatGPT to test the similarity of\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# two essays provided. This is not meant to be used to find the \u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# actually score for the methods needed for the project. Just a secondary\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# testing method to check my scores.\u001b[39;00m\n\u001b[32m      5\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mpip\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33minstall -q sentence-transformers\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msentence_transformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SentenceTransformer, util\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Load your CSV\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'sentence_transformers'"
+     ]
+    }
+   ],
+   "source": [
+    "# This is a model made by ChatGPT to test the similarity of\n",
+    "# two essays provided. This is not meant to be used to find the \n",
+    "# actually score for the methods needed for the project. Just a secondary\n",
+    "# testing method to check my scores.\n",
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load your CSV\n",
+    "df = pd.read_csv(r'nlp_project_train.csv')\n",
+    "\n",
+    "# Load the transformer model once (globally)\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
+    "\n",
+    "def compare_essays_by_id(id1, id2, df):\n",
+    "    # Lookup essays by ID\n",
+    "    essay1_row = df[df[\"Essay_ID\"] == id1]\n",
+    "    essay2_row = df[df[\"Essay_ID\"] == id2]\n",
+    "\n",
+    "    if essay1_row.empty or essay2_row.empty:\n",
+    "        return f\"One or both Essay IDs not found: {id1}, {id2}\"\n",
+    "\n",
+    "    essay1 = essay1_row[\"Essay_Text\"].values[0]\n",
+    "    essay2 = essay2_row[\"Essay_Text\"].values[0]\n",
+    "\n",
+    "    # === SentenceTransformer similarity (THIS IS WHERE IT GOES) ===\n",
+    "    embeddings = model.encode([essay1, essay2])\n",
+    "    score = util.cos_sim(embeddings[0], embeddings[1]).item()\n",
+    "\n",
+    "    # Extract first sentences\n",
+    "    first_sentence1 = essay1.strip().split('.')[0]\n",
+    "    first_sentence2 = essay2.strip().split('.')[0]\n",
+    "\n",
+    "    # Output\n",
+    "    print(f\"Essay {id1} vs Essay {id2}\")\n",
+    "    print(f\"Similarity Score: {score:.4f}\")\n",
+    "    print(f\"Essay 1: {first_sentence1}\")\n",
+    "    print(f\"Essay 2: {first_sentence2}\")\n",
+    "\n",
+    "compare_essays_by_id(\"29aa983\", \"6d25307\", df)\n"
+   ]
   }
  ],
  "metadata": {
@@ -252,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
