--- a/ProjectNLP/essay_scoring.ipynb
+++ b/ProjectNLP/essay_scoring.ipynb
@@ -258,13 +258,35 @@
       "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# This is a model made by ChatGPT to test the similarity of\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# two essays provided. This is not meant to be used to find the \u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# actually score for the methods needed for the project. Just a secondary\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# testing method to check my scores.\u001b[39;00m\n\u001b[32m      5\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mpip\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33minstall -q sentence-transformers\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msentence_transformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SentenceTransformer, util\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Load your CSV\u001b[39;00m\n",
       "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'sentence_transformers'"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: The script tqdm.exe is installed in 'c:\\Users\\lukec\\AppData\\Local\\Programs\\Python\\Python313\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "  WARNING: The script isympy.exe is installed in 'c:\\Users\\lukec\\AppData\\Local\\Programs\\Python\\Python313\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "  WARNING: The script normalizer.exe is installed in 'c:\\Users\\lukec\\AppData\\Local\\Programs\\Python\\Python313\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "  WARNING: The scripts torchfrtrace.exe and torchrun.exe are installed in 'c:\\Users\\lukec\\AppData\\Local\\Programs\\Python\\Python313\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "  WARNING: The script huggingface-cli.exe is installed in 'c:\\Users\\lukec\\AppData\\Local\\Programs\\Python\\Python313\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "  WARNING: The script transformers-cli.exe is installed in 'c:\\Users\\lukec\\AppData\\Local\\Programs\\Python\\Python313\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n",
+      "\n",
+      "[notice] A new release of pip is available: 24.3.1 -> 25.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
     }
    ],
    "source": [
     "# This is a model made by ChatGPT to test the similarity of\n",
     "# two essays provided. This is not meant to be used to find the \n",
     "# actually score for the methods needed for the project. Just a secondary\n",
-    "# testing method to check my scores.\n",
+    "# testing method to check my scores\n",
+    "\n",
     "from sentence_transformers import SentenceTransformer, util\n",
     "import pandas as pd\n",
     "\n",
