--- a/Final_Project/Final_Proj.ipynb
+++ b/Final_Project/Final_Proj.ipynb
@@ -245,7 +245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "8955df3c",
       "metadata": {
         "id": "8955df3c"
@@ -267,7 +267,7 @@
         "                  loss=BinaryCrossentropy(),\n",
         "                  metrics=['accuracy'])\n",
         "\n",
-        "    history = model.fit(X_scaled, y, epochs=200, verbose=0)\n",
+        "    history = model.fit(X_scaled, y, epochs=300, verbose=0)\n",
         "    final_acc = history.history['accuracy'][-1]\n",
         "    results.append((f\"{neurons_per_layer}-neuron x {hidden_layers}-layer\", final_acc))\n",
         "    return model, history"
@@ -275,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "cba672fd",
       "metadata": {
         "colab": {
@@ -315,8 +315,8 @@
       ],
       "source": [
         "# Test model configurations\n",
-        "layer_sizes = [1, 2, 3]\n",
-        "neuron_options = [1, 2, 4, 8, 16, 32, 64]\n",
+        "layer_sizes = [1, 2, 3, 4, 5]\n",
+        "neuron_options = [1, 2, 4, 8, 16, 32, 64, 128, 256]\n",
         "\n",
         "for layers in layer_sizes:\n",
         "    for neurons in neuron_options:\n",
