--- a/Final_Project/Final_Proj.ipynb
+++ b/Final_Project/Final_Proj.ipynb
@@ -18,13 +18,13 @@
       ],
       "metadata": {
         "id": "Qcg19GCf6VF0",
-        "outputId": "b45108e2-6496-4d78-946d-a90ab59704eb",
+        "outputId": "f9873b65-5b63-4cdb-ac6b-1b86f429b782",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "Qcg19GCf6VF0",
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -47,12 +47,12 @@
         "id": "S0tjj-g11aA4"
       },
       "id": "S0tjj-g11aA4",
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 13,
       "id": "462f904f",
       "metadata": {
         "id": "462f904f"
@@ -107,10 +107,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uyk_FGBOuuye",
-        "outputId": "7d9ded97-610c-4f4a-c558-377f783cc8be"
+        "outputId": "58251543-afc9-46fb-d984-e96bb0f50643"
       },
       "id": "Uyk_FGBOuuye",
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,17 +134,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nnlji-ApvYXo",
-        "outputId": "e41b39dd-05e0-4139-bba9-29fad9582800"
+        "outputId": "14fe4332-b1ea-4a82-bcbc-ff98c2f41783"
       },
       "id": "Nnlji-ApvYXo",
-      "execution_count": 8,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "GPUs available: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n",
-            "Tue Apr 29 19:17:25 2025       \n",
+            "Wed Apr 30 20:10:46 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -153,7 +153,7 @@
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
             "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   36C    P8             11W /   70W |       2MiB /  15360MiB |      0%      Default |\n",
+            "| N/A   42C    P8              9W /   70W |       2MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
             "                                                                                         \n",
@@ -203,17 +203,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SL1Ma84Y09Cy",
-        "outputId": "933cd979-0343-4422-9f57-a3b364eceecb"
+        "outputId": "eac5d577-2324-4fec-b7f1-8c1ce67cf957"
       },
       "id": "SL1Ma84Y09Cy",
-      "execution_count": 9,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "name, driver_version, uuid\n",
-            "Tesla T4, 550.54.15, GPU-c1866128-abeb-8c2e-d3de-fa9bffb887b4\n",
+            "Tesla T4, 550.54.15, GPU-34037748-aef7-4161-3a9e-abd76c0366de\n",
             "Compute dtype: float16\n",
             "Variable dtype: float32\n"
           ]
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 17,
       "id": "0f3e61ea",
       "metadata": {
         "id": "0f3e61ea"
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 18,
       "id": "3ee087b0",
       "metadata": {
         "id": "3ee087b0"
@@ -275,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 19,
       "id": "af983b96",
       "metadata": {
         "colab": {
@@ -283,7 +283,7 @@
           "height": 1000
         },
         "id": "af983b96",
-        "outputId": "403e59b9-526c-4f8a-e375-9f496cc648a3"
+        "outputId": "6a14e793-9fa0-4c5c-dc9d-4354bc7e9a0e"
       },
       "outputs": [
         {
@@ -435,12 +435,12 @@
         "id": "N5cSna89Fkrv"
       },
       "id": "N5cSna89Fkrv",
-      "execution_count": 13,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 21,
       "id": "89d5060b",
       "metadata": {
         "id": "89d5060b"
@@ -461,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 22,
       "id": "8955df3c",
       "metadata": {
         "id": "8955df3c"
@@ -5115,11 +5115,28 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "xKSQth9XzxHf"
+        "id": "xKSQth9XzxHf",
+        "outputId": "2f811cde-cb24-4127-ad9c-00e78e2d9d04",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        }
       },
       "id": "xKSQth9XzxHf",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'plt' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-73e6f27a6fd6>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Plot Accuracy vs Model Configuration\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mconfigs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mcfg\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcfg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0moverfitting_results\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0maccuracies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0macc\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0macc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0moverfitting_results\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfigs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracies\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmarker\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'o'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5142,7 +5159,7 @@
         "id": "uK2hHjM4kvQH"
       },
       "id": "uK2hHjM4kvQH",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5192,7 +5209,7 @@
         "id": "ic8D_VbujyN4"
       },
       "id": "ic8D_VbujyN4",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5213,12 +5230,12 @@
         "id": "MJc0-NAeLB1_"
       },
       "id": "MJc0-NAeLB1_",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "26115536",
       "metadata": {
         "id": "26115536"
@@ -5266,7 +5283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "882107ab",
       "metadata": {
         "id": "882107ab"
@@ -5291,7 +5308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "5757464f",
       "metadata": {
         "id": "5757464f"
@@ -5305,7 +5322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "c6fc1604",
       "metadata": {
         "id": "c6fc1604",
@@ -8357,12 +8374,6 @@
       "source": [
         "# 3. Neural Network Architectures to Evaluate\n",
         "architectures = {\n",
-        "    '4-8-16-32-16-8-4-1':   [4, 8, 16, 32, 16, 8, 4],\n",
-        "    '5-10-20-10-5-1':       [5, 10, 20, 10, 5],\n",
-        "    '6-12-24-12-6-1':       [6, 12, 24, 12, 6],\n",
-        "    '5-5-5-5-5-5-5-1':      [5, 5, 5, 5, 5, 5, 5],\n",
-        "    '3-6-12-24-12-6-3-1':   [3, 6, 12, 24, 12, 6, 3],\n",
-        "    '8-16-32-64-32-16-8-1': [8, 16, 32, 64, 32, 16, 8],\n",
         "}\n",
         "for name, layers in architectures.items():\n",
         "    if name not in metrics_df['Model'].values:\n",
@@ -8371,7 +8382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "52a362cf",
       "metadata": {
         "colab": {
@@ -8446,7 +8457,7 @@
         }
       },
       "id": "vp5TGRhPu5CW",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8499,7 +8510,7 @@
         }
       },
       "id": "rkVHN3YgdeyJ",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8530,7 +8541,7 @@
         "id": "ghokC3k--88v"
       },
       "id": "ghokC3k--88v",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8554,7 +8565,7 @@
         "id": "X3jxH6UR_BeF"
       },
       "id": "X3jxH6UR_BeF",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8594,7 +8605,7 @@
         }
       },
       "id": "JdAnrOWb_GJl",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8645,7 +8656,7 @@
         }
       },
       "id": "scpsL4Sq_Jdy",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8690,7 +8701,7 @@
         }
       },
       "id": "yUvhpmr1_LjW",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8740,7 +8751,7 @@
         }
       },
       "id": "OI8xkYgk_VY3",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8765,7 +8776,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 7) Full feature baseline comparison\n",
+        "# Full feature baseline comparison\n",
         "model_full = make_model(input_dim=len(feature_names))\n",
         "ckpt_full = ModelCheckpoint(os.path.join(checkpoint_dir, 'full_model.keras'), monitor='val_accuracy', save_best_only=True)\n",
         "h_full = model_full.fit(\n",
@@ -8785,7 +8796,7 @@
         }
       },
       "id": "lA6HNGns_Wzt",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
