--- a/Final_Project/Final_Proj.ipynb
+++ b/Final_Project/Final_Proj.ipynb
@@ -626,7 +626,40 @@
             "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8256 - loss: 0.3709\n",
             "Epoch 59/250\n",
             "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 83ms/step - accuracy: 0.8245 - loss: 0.3733\n",
-            "Epoch 60/250\n"
+            "Epoch 60/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8263 - loss: 0.3710\n",
+            "Epoch 61/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8277 - loss: 0.3653\n",
+            "Epoch 62/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8315 - loss: 0.3582\n",
+            "Epoch 63/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8327 - loss: 0.3597\n",
+            "Epoch 64/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8335 - loss: 0.3522\n",
+            "Epoch 65/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 83ms/step - accuracy: 0.8350 - loss: 0.3538\n",
+            "Epoch 66/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 83ms/step - accuracy: 0.8367 - loss: 0.3531\n",
+            "Epoch 67/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8386 - loss: 0.3456\n",
+            "Epoch 68/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8419 - loss: 0.3392\n",
+            "Epoch 69/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8426 - loss: 0.3401\n",
+            "Epoch 70/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8434 - loss: 0.3375\n",
+            "Epoch 71/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8437 - loss: 0.3341\n",
+            "Epoch 72/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 83ms/step - accuracy: 0.8462 - loss: 0.3313\n",
+            "Epoch 73/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 83ms/step - accuracy: 0.8508 - loss: 0.3237\n",
+            "Epoch 74/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8518 - loss: 0.3192\n",
+            "Epoch 75/250\n",
+            "\u001b[1m277/277\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 83ms/step - accuracy: 0.8522 - loss: 0.3244\n",
+            "Epoch 76/250\n",
+            "\u001b[1m109/277\u001b[0m \u001b[32m━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━\u001b[0m \u001b[1m13s\u001b[0m 83ms/step - accuracy: 0.8485 - loss: 0.3290"
           ]
         }
       ],
@@ -4420,7 +4453,7 @@
         "for model in [ckpt_best, ckpt_full]:\n",
         "    fpr, tpr, _ = roc_curve(y_val, model.predict(X_val[best_feats].values))\n",
         "    auc = roc_auc_score(y_val, model.predict(X_val[best_feats].values))\n",
-        "    plt.plot(fpr, tpr, label=f'{model.name} (AUC = {roc_auc:.2f})')\n",
+        "    plt.plot(fpr, tpr, label=f'{model.name} (AUC = {auc:.2f})')\n",
         "\n",
         "plt.plot([0, 1], [0, 1], 'k--')\n",
         "plt.xlabel('False Positive Rate')\n",
