--- a/Final_Project/Final_Proj.ipynb
+++ b/Final_Project/Final_Proj.ipynb
@@ -24,7 +24,7 @@
         }
       },
       "id": "Qcg19GCf6VF0",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -47,12 +47,12 @@
         "id": "S0tjj-g11aA4"
       },
       "id": "S0tjj-g11aA4",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "462f904f",
       "metadata": {
         "id": "462f904f"
@@ -110,7 +110,7 @@
         "outputId": "a9fb4cce-3568-4960-d994-7c55e9cfc5e6"
       },
       "id": "Uyk_FGBOuuye",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
         "outputId": "e7fee5b1-9b0a-439a-f512-fceda329f871"
       },
       "id": "Nnlji-ApvYXo",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,7 +206,7 @@
         "outputId": "3d20600f-9268-41fe-a356-853f9e8078cb"
       },
       "id": "SL1Ma84Y09Cy",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "0f3e61ea",
       "metadata": {
         "id": "0f3e61ea"
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "3ee087b0",
       "metadata": {
         "id": "3ee087b0"
@@ -275,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "af983b96",
       "metadata": {
         "colab": {
@@ -842,9 +842,9 @@
         "            for neurons in neuron_options:\n",
         "                cfg = f\"{epochs}e_{batch_size}b_{layers}l_{neurons}n\"\n",
         "                if cfg in done_configs:\n",
-        "                    print(f\"✔ Skipping {cfg}, already done.\")\n",
+        "                    print(f\"Skipping {cfg}, already done.\")\n",
         "                    continue\n",
-        "                print(f\"▶ Training model: {cfg}\")\n",
+        "                print(f\"Training model: {cfg}\")\n",
         "                start = time.time()\n",
         "                model, history, final_acc = build_and_train_overfit_model(\n",
         "                    hidden_layers=layers,\n",
@@ -1175,7 +1175,7 @@
         "\n",
         "    # collect up to four unique, non‐repeated suggestions\n",
         "    for v in variants:\n",
-        "        candidate = '-'.join(map(str, v)) + '-1'\n",
+        "        candidate = '-'.join(map(str, v))\n",
         "        if candidate not in existing and candidate not in suggestions:\n",
         "            suggestions.append(candidate)\n",
         "            if len(suggestions) == 4:\n",
