--- a/Final_Project/Final_Proj.ipynb
+++ b/Final_Project/Final_Proj.ipynb
@@ -18,13 +18,13 @@
       ],
       "metadata": {
         "id": "Qcg19GCf6VF0",
-        "outputId": "803897cd-28e7-4991-8693-1767fe4b0eba",
+        "outputId": "50527789-ea8d-417b-dfb5-337ab17927dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "Qcg19GCf6VF0",
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -47,12 +47,12 @@
         "id": "S0tjj-g11aA4"
       },
       "id": "S0tjj-g11aA4",
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "462f904f",
       "metadata": {
         "id": "462f904f"
@@ -74,6 +74,7 @@
         "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, Callback\n",
         "from tensorflow.keras.models import load_model\n",
         "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, roc_curve, auc\n",
+        "from sklearn.impute import SimpleImputer\n",
         "import matplotlib.pyplot as plt\n",
         "import os\n",
         "from google.colab import files\n",
@@ -107,10 +108,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uyk_FGBOuuye",
-        "outputId": "a9fb4cce-3568-4960-d994-7c55e9cfc5e6"
+        "outputId": "230c4c2d-16e3-4783-fac0-990720cfdf31"
       },
       "id": "Uyk_FGBOuuye",
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +125,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import tensorflow as tf\n",
         "# List physical devices to confirm GPU is available\n",
         "print(\"GPUs available:\", tf.config.list_physical_devices('GPU'))\n",
         "!nvidia-smi                              # shows GPU status and memory\n"
@@ -134,17 +134,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nnlji-ApvYXo",
-        "outputId": "e7fee5b1-9b0a-439a-f512-fceda329f871"
+        "outputId": "5032c353-7820-45a5-befe-8521c4000a59"
       },
       "id": "Nnlji-ApvYXo",
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "GPUs available: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n",
-            "Sat May  3 19:16:25 2025       \n",
+            "Sun May 11 18:15:33 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -153,7 +153,7 @@
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
             "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   64C    P8             12W /   70W |       2MiB /  15360MiB |      0%      Default |\n",
+            "| N/A   62C    P8             11W /   70W |       2MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
             "                                                                                         \n",
@@ -183,10 +183,7 @@
       "source": [
         "# 0) (Optional) sanity-check that you have a T4\n",
         "!nvidia-smi --query-gpu=name,driver_version,uuid --format=csv\n",
-        "\n",
-        "# 1) Imports + XLA JIT\n",
-        "import os\n",
-        "import tensorflow as tf\n",
+        "#Imports + XLA JIT\n",
         "from tensorflow.keras import mixed_precision\n",
         "\n",
         "# Enable XLA (fuses kernels)\n",
@@ -203,17 +200,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SL1Ma84Y09Cy",
-        "outputId": "3d20600f-9268-41fe-a356-853f9e8078cb"
+        "outputId": "d9019006-826a-472c-c60a-da57e6c6040c"
       },
       "id": "SL1Ma84Y09Cy",
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "name, driver_version, uuid\n",
-            "Tesla T4, 550.54.15, GPU-fa52e284-8206-a245-2a82-f0d6c9cc6635\n",
+            "Tesla T4, 550.54.15, GPU-d5bd1014-9597-6785-0412-84c19f1c1b77\n",
             "Compute dtype: float16\n",
             "Variable dtype: float32\n"
           ]
@@ -232,7 +229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "0f3e61ea",
       "metadata": {
         "id": "0f3e61ea"
@@ -246,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "3ee087b0",
       "metadata": {
         "id": "3ee087b0"
@@ -275,7 +272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "af983b96",
       "metadata": {
         "colab": {
@@ -283,7 +280,7 @@
           "height": 1000
         },
         "id": "af983b96",
-        "outputId": "06e08289-8a09-47ff-c478-6a43d1e2ea9d"
+        "outputId": "1335ddca-6014-45c2-e26e-3a4cd9067946"
       },
       "outputs": [
         {
@@ -533,6 +530,17 @@
         "X = df_shuffled.drop(columns=['Diabetes'])\n",
         "y = df_shuffled['Diabetes']\n",
         "\n",
+        "# Identify binary and non-binary features\n",
+        "binary_cols = [cols for cols in X.columns if X[cols].nunique() == 2]\n",
+        "non_binary_cols = [cols for cols in X.columns if X[cols].nunique() > 2]\n",
+        "# Creates imputers\n",
+        "binary_imputer = SimpleImputer(strategy='most_frequent')\n",
+        "non_binary_imputer = SimpleImputer(strategy='mean')\n",
+        "\n",
+        "# Imputes missing values\n",
+        "X[binary_cols] = binary_imputer.fit_transform(X[binary_cols])\n",
+        "X[non_binary_cols] = non_binary_imputer.fit_transform(X[non_binary_cols])\n",
+        "\n",
         "# Normalize numeric input features\n",
         "scaler = MinMaxScaler()\n",
         "X_scaled = pd.DataFrame(scaler.fit_transform(X), columns=X.columns)\n",
@@ -665,7 +673,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cba672fd",
-        "outputId": "cc6aad04-17c0-48e1-d232-1b7dd48897c9"
+        "outputId": "cc6aad04-17c0-48e1-d232-1b7dd48897c9",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -831,8 +840,8 @@
       "source": [
         "epoch_options      = [250]\n",
         "batch_size_options = [256]\n",
-        "layer_sizes        = [5, 6, 7]\n",
-        "neuron_options     = [256, 512, 1024]\n",
+        "layer_sizes        = [7]\n",
+        "neuron_options     = [1024]\n",
         "\n",
         "total_start = time.time()\n",
         "\n",
@@ -861,7 +870,6 @@
         "                # Persist results\n",
         "                with open(results_path, 'wb') as f:\n",
         "                    pickle.dump(overfitting_results, f)\n",
-        "                import pandas as pd\n",
         "                df = pd.DataFrame(overfitting_results, columns=['config','accuracy','time_s'])\n",
         "                df.to_csv(os.path.join(checkpoint_dir, 'overfit_results.csv'), index=False)\n"
       ]
